src/objects/Estimate__c.object
<CustomObject>
    <fields>
        <fullName>Capability_Work_Stream__c</fullName>
        <label>Capability / Work Stream</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Offering__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Console</fullName>
                </value>
                <value>
                    <fullName>Custom Object (Other)</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <label>Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Workflow and Approval</fullName>
                </value>
                <value>
                    <fullName>User Administration</fullName>
                </value>
                <value>
                    <fullName>Report and Dashboard</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Integration (Batch)</fullName>
                </value>
                <value>
                    <fullName>Integration (Real Time)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Object_Name__c</fullName>
        <label>Custom Object Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Methodology__c</fullName>
        <label>Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile</fullName>
                </value>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <label>Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Salesforce1 Platform</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Work.com</fullName>
                </value>
                <value>
                    <fullName>Community Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Offering__c</columns>
        <columns>Capability_Work_Stream__c</columns>
        <columns>Components__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EST-{000000}</displayFormat>
        <label>Estimate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Custom_Object_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPickval( Capability_Work_Stream__c ,&apos;Custom Object (Other)&apos;), 
ISBLANK(Custom_Object_Name__c))</errorConditionFormula>
        <errorDisplayField>Custom_Object_Name__c</errorDisplayField>
        <errorMessage>Custom Object Name is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Custom_Object_Name_Should_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISPickval( Capability_Work_Stream__c ,&apos;Custom Object (Other)&apos;)), 
NOT(ISBLANK(Custom_Object_Name__c))
)</errorConditionFormula>
        <errorDisplayField>Custom_Object_Name__c</errorDisplayField>
        <errorMessage>Must have no name for standard capability / work stream</errorMessage>
    </validationRules>
</CustomObject>